tests/success/const-3.moc
void main() {
    Int const * const a;
}