tests/bad/functions/3.moc
Int main(Int a) {
    main("enseeiht");
}

